# ReRight

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: setup_dev_env.ps1
src/file_sanitizer/: cli.py
src/file_sanitizer/core/: operations.py  sanitize.py
tests/: test_operations.py  test_sanitizer.py
