[project]
name = "ReRight"
version = "0.1.0"
description = "A Python CLI tool for sanitizing file and folder names"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "OdysseyHome", email = "OdysseyHome@outlook.com" }
]
license = "MIT" # Fixed quotes
dependencies = [
  "typer>=0.9.0",
  "rich>=10.0.0",
]
keywords = ["files", "sanitizer"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
]

[project.scripts]
fsan = "file_sanitizer.core.sanitize:main"

# uv prefers this new standard for dev tools
[dependency-groups]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1",
    "pre-commit>=2.20",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

# ... rest of your [tool.black] and [tool.ruff] configs remain the same